# firehose-rs

./: Cargo.toml  README.md  REUSE.toml  build.rs
.github/workflows/: audit.yml  license_headers_check.yml  release.yml  tests.yml
protos/: LICENSE  firehose.proto
src/: lib.rs
src/firehose_v2/: mod.rs  request.rs
