[package]
name = "firehose-rs"
version = "0.1.0"
edition = "2021"
description = "Firehose client for Rust"
authors = ["Joseph Livesey <joseph@semiotic.ai>"]
license = "Apache-2.0"
repository = "https://github.com/semio-ai/firehose-rs"

[lib]
path = "src/lib.rs"
name = "firehose_rs"

[dependencies]
prost = "0.13.5"
prost-wkt = "0.6.1"
prost-wkt-types = "0.6.1"
serde = "1.0.219"
tonic = "0.13.0"

[build-dependencies]
prost-build = "0.13.5"
tonic-build = "0.13.0"
