[package]
name = "firehose-rs"
version = "0.1.3"
edition = "2021"
description = "Firehose client components compiled to Rust"
authors = ["Joseph Livesey <joseph@semiotic.ai>"]
license = "Apache-2.0"
repository = "https://github.com/semiotic-ai/firehose-rs"

[lib]
path = "src/lib.rs"
name = "firehose_rs"

[dependencies]
prost = "0.13.5"
prost-wkt = "0.6.1"
prost-wkt-types = "0.6.1"
serde = "1.0.219"
tonic = "0.13.1"

[build-dependencies]
prost-build = "0.13.5"
tonic-build = { version = "0.13.1", default-features = false, features = ["prost"] }
