[package]
name = "firehose-rs"
version = "0.2.0"
edition = "2021"
description = "Firehose client components compiled to Rust"
authors = ["Joseph Livesey <joseph@semiotic.ai>"]
license = "Apache-2.0"
repository = "https://github.com/semiotic-ai/firehose-rs"

[lib]
path = "src/lib.rs"
name = "firehose_rs"

[dependencies]
prost = "0.14.1"
prost-wkt = "0.7.0"
prost-wkt-types = "0.7.0"
serde = "1.0.228"
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
prost-build = "0.14.1"
tonic-prost-build = "0.14.2"
